src/main/antlr/SublimeSnippetContentParser.g4
parser grammar SublimeSnippetContentParser;

options  { tokenVocab=SublimeSnippetContentLexer; }

snippet
    : (field | text)*
    ;

text
    : TextCharacter+
    ;

field
    : fieldUnbracketed
    | fieldBracketed
    | fieldBracketedWithPlaceholder
    | fieldBracketedWithSubstitution
    ;

fieldUnbracketed
    : FieldUnbracketed
    ;

fieldBracketed
    : FieldBracketed
    ;

textInside
    : Inside_TextCharacter+
    ;

fieldBracketedWithPlaceholder
    : FieldBracketedStart VarNameAndPlaceholderStart (field | textInside)* FieldBracketedEnd
    ;

fieldBracketedWithSubstitution
    : FieldBracketedStart VarNameAndSubstitutionStart RegexpReplacementAndOptions FieldBracketedEnd
    ;
