src/main/java/com/kevinlinxp/sublimeSnippetsSupport/SublimeSnippetContentParser.java
// Generated from /Users/kelin/Work/kelin/SublimeSnippetsSupport/src/main/antlr/SublimeSnippetContentParser.g4 by ANTLR 4.7
package com.kevinlinxp.sublimeSnippetsSupport;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SublimeSnippetContentParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		TextCharacter=1, FieldUnbracketed=2, FieldBracketed=3, FieldBracketedStart=4, 
		Inside_TextCharacter=5, FieldBracketedEnd=6, VarNameAndPlaceholderStart=7, 
		VarNameAndSubstitutionStart=8, RegexpReplacementAndOptions=9;
	public static final int
		RULE_snippet = 0, RULE_text = 1, RULE_field = 2, RULE_fieldUnbracketed = 3, 
		RULE_fieldBracketed = 4, RULE_textInside = 5, RULE_fieldBracketedWithPlaceholder = 6, 
		RULE_fieldBracketedWithSubstitution = 7;
	public static final String[] ruleNames = {
		"snippet", "text", "field", "fieldUnbracketed", "fieldBracketed", "textInside", 
		"fieldBracketedWithPlaceholder", "fieldBracketedWithSubstitution"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, "'${'", null, "'}'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "TextCharacter", "FieldUnbracketed", "FieldBracketed", "FieldBracketedStart", 
		"Inside_TextCharacter", "FieldBracketedEnd", "VarNameAndPlaceholderStart", 
		"VarNameAndSubstitutionStart", "RegexpReplacementAndOptions"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SublimeSnippetContentParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SublimeSnippetContentParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class SnippetContext extends ParserRuleContext {
		public List<FieldContext> field() {
			return getRuleContexts(FieldContext.class);
		}
		public FieldContext field(int i) {
			return getRuleContext(FieldContext.class,i);
		}
		public List<TextContext> text() {
			return getRuleContexts(TextContext.class);
		}
		public TextContext text(int i) {
			return getRuleContext(TextContext.class,i);
		}
		public SnippetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_snippet; }
	}

	public final SnippetContext snippet() throws RecognitionException {
		SnippetContext _localctx = new SnippetContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_snippet);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(20);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TextCharacter) | (1L << FieldUnbracketed) | (1L << FieldBracketed) | (1L << FieldBracketedStart))) != 0)) {
				{
				setState(18);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case FieldUnbracketed:
				case FieldBracketed:
				case FieldBracketedStart:
					{
					setState(16);
					field();
					}
					break;
				case TextCharacter:
					{
					setState(17);
					text();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(22);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TextContext extends ParserRuleContext {
		public List<TerminalNode> TextCharacter() { return getTokens(SublimeSnippetContentParser.TextCharacter); }
		public TerminalNode TextCharacter(int i) {
			return getToken(SublimeSnippetContentParser.TextCharacter, i);
		}
		public TextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_text; }
	}

	public final TextContext text() throws RecognitionException {
		TextContext _localctx = new TextContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_text);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(24); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(23);
					match(TextCharacter);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(26); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldContext extends ParserRuleContext {
		public FieldUnbracketedContext fieldUnbracketed() {
			return getRuleContext(FieldUnbracketedContext.class,0);
		}
		public FieldBracketedContext fieldBracketed() {
			return getRuleContext(FieldBracketedContext.class,0);
		}
		public FieldBracketedWithPlaceholderContext fieldBracketedWithPlaceholder() {
			return getRuleContext(FieldBracketedWithPlaceholderContext.class,0);
		}
		public FieldBracketedWithSubstitutionContext fieldBracketedWithSubstitution() {
			return getRuleContext(FieldBracketedWithSubstitutionContext.class,0);
		}
		public FieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_field; }
	}

	public final FieldContext field() throws RecognitionException {
		FieldContext _localctx = new FieldContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_field);
		try {
			setState(32);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(28);
				fieldUnbracketed();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(29);
				fieldBracketed();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(30);
				fieldBracketedWithPlaceholder();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(31);
				fieldBracketedWithSubstitution();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldUnbracketedContext extends ParserRuleContext {
		public TerminalNode FieldUnbracketed() { return getToken(SublimeSnippetContentParser.FieldUnbracketed, 0); }
		public FieldUnbracketedContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldUnbracketed; }
	}

	public final FieldUnbracketedContext fieldUnbracketed() throws RecognitionException {
		FieldUnbracketedContext _localctx = new FieldUnbracketedContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_fieldUnbracketed);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			match(FieldUnbracketed);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldBracketedContext extends ParserRuleContext {
		public TerminalNode FieldBracketed() { return getToken(SublimeSnippetContentParser.FieldBracketed, 0); }
		public FieldBracketedContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldBracketed; }
	}

	public final FieldBracketedContext fieldBracketed() throws RecognitionException {
		FieldBracketedContext _localctx = new FieldBracketedContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_fieldBracketed);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			match(FieldBracketed);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TextInsideContext extends ParserRuleContext {
		public List<TerminalNode> Inside_TextCharacter() { return getTokens(SublimeSnippetContentParser.Inside_TextCharacter); }
		public TerminalNode Inside_TextCharacter(int i) {
			return getToken(SublimeSnippetContentParser.Inside_TextCharacter, i);
		}
		public TextInsideContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_textInside; }
	}

	public final TextInsideContext textInside() throws RecognitionException {
		TextInsideContext _localctx = new TextInsideContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_textInside);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(39); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(38);
					match(Inside_TextCharacter);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(41); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldBracketedWithPlaceholderContext extends ParserRuleContext {
		public TerminalNode FieldBracketedStart() { return getToken(SublimeSnippetContentParser.FieldBracketedStart, 0); }
		public TerminalNode VarNameAndPlaceholderStart() { return getToken(SublimeSnippetContentParser.VarNameAndPlaceholderStart, 0); }
		public TerminalNode FieldBracketedEnd() { return getToken(SublimeSnippetContentParser.FieldBracketedEnd, 0); }
		public List<FieldContext> field() {
			return getRuleContexts(FieldContext.class);
		}
		public FieldContext field(int i) {
			return getRuleContext(FieldContext.class,i);
		}
		public List<TextInsideContext> textInside() {
			return getRuleContexts(TextInsideContext.class);
		}
		public TextInsideContext textInside(int i) {
			return getRuleContext(TextInsideContext.class,i);
		}
		public FieldBracketedWithPlaceholderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldBracketedWithPlaceholder; }
	}

	public final FieldBracketedWithPlaceholderContext fieldBracketedWithPlaceholder() throws RecognitionException {
		FieldBracketedWithPlaceholderContext _localctx = new FieldBracketedWithPlaceholderContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_fieldBracketedWithPlaceholder);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			match(FieldBracketedStart);
			setState(44);
			match(VarNameAndPlaceholderStart);
			setState(49);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FieldUnbracketed) | (1L << FieldBracketed) | (1L << FieldBracketedStart) | (1L << Inside_TextCharacter))) != 0)) {
				{
				setState(47);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case FieldUnbracketed:
				case FieldBracketed:
				case FieldBracketedStart:
					{
					setState(45);
					field();
					}
					break;
				case Inside_TextCharacter:
					{
					setState(46);
					textInside();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(51);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(52);
			match(FieldBracketedEnd);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldBracketedWithSubstitutionContext extends ParserRuleContext {
		public TerminalNode FieldBracketedStart() { return getToken(SublimeSnippetContentParser.FieldBracketedStart, 0); }
		public TerminalNode VarNameAndSubstitutionStart() { return getToken(SublimeSnippetContentParser.VarNameAndSubstitutionStart, 0); }
		public TerminalNode RegexpReplacementAndOptions() { return getToken(SublimeSnippetContentParser.RegexpReplacementAndOptions, 0); }
		public TerminalNode FieldBracketedEnd() { return getToken(SublimeSnippetContentParser.FieldBracketedEnd, 0); }
		public FieldBracketedWithSubstitutionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldBracketedWithSubstitution; }
	}

	public final FieldBracketedWithSubstitutionContext fieldBracketedWithSubstitution() throws RecognitionException {
		FieldBracketedWithSubstitutionContext _localctx = new FieldBracketedWithSubstitutionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_fieldBracketedWithSubstitution);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			match(FieldBracketedStart);
			setState(55);
			match(VarNameAndSubstitutionStart);
			setState(56);
			match(RegexpReplacementAndOptions);
			setState(57);
			match(FieldBracketedEnd);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}